<resources>
    <string name="app_name">Weather001</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s,%s</string>
    <string name="change_cities_list">Изменить список городов</string>
    <string name="error">Ошибка!</string>
    <string name="reload">Обновить</string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="calculate">Расчет</string>
    <string name="default_number">1</string>
    <string name="start_usual_service">Запустить обычный сервис</string>
    <string name="threads">Потоки</string>
    <string name="history">История</string>
    <string name="need_permissions_to_read_contacts">Необходимо дать разрешение на чтение контактов</string>
    <string name="content_provider">Контент провайдер</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="map">Карта</string>
    <string name="map_mode">Режим карты</string>
    <string name="normal">Нормальный</string>
    <string name="satellites">Спутники</string>
    <string name="terrain">Схема</string>
    <string name="traffic">Трафик</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search">Поиск</string>
    <string name="start_marker">Старт</string>
    <string name="dialog_button_close">Закрыть</string>
</resources>