<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_threads"
        android:title="@string/threads"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_edu_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_content_provider"
        android:title="@string/content_provider"
        android:icon="@drawable/ic_baseline_contacts_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_google_maps"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

</menu>